syntax = "proto3";

option go_package = "../rpc_proto";

package rpc_proto;


// The AccServer service definition.
service AccServer {
    // 发送消息
    rpc SendMsg (SendMsgReq) returns (SendMsgRsp) {
    }
}

// 发送消息
message SendMsgReq {
    string seq = 1; // 序列号
    uint32 appId = 2; // appId/房间Id
    string userId = 3; // 用户ID
    string cms = 4; // cms 动作: msg/enter/exit
    string type = 5; // type 消息类型，默认是 text
    string msg = 6; // msg
    bool isLocal = 7; // 是否查询本机 acc内部调用为:true(本机查询不到即结束)
}

message SendMsgRsp {
    uint32 retCode = 1;
    string errMsg = 2;
    string sendMsgId = 3;
}
